responsive design horizontal scroll fixed

--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,6 @@
+body {
+    overflow-x: hidden;
+  }
 .button-bg-color{
     background-color: #1F458E;
 }
